@@ -59,6 +59,19 @@ DEB_AUTO_UPDATE_DEBIAN_CONTROL=0
 CFLAGS = -g
 CXXFLAGS = -g
 
+ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+  EXTRA_SYSTEM_CONFIGURE_FLAGS += --disable-optimize
+endif
+
+USE_SYSTEM_CAIRO := $(shell pkg-config --exists 'cairo >= 1.5.4'; a=$$?; if test $$a != 1; then echo 1; fi)
+
+# for old cairo versions we cannot use system cairo
+ifeq (1,$(USE_SYSTEM_CAIRO))
+   EXTRA_SYSTEM_CONFIGURE_FLAGS += --enable-system-cairo
+else
+   EXTRA_SYSTEM_CONFIGURE_FLAGS += --disable-system-cairo
+endif
+
 DEB_CONFIGURE_USER_FLAGS= \
 	$(EXTRA_SYSTEM_CONFIGURE_FLAGS) \
 	--disable-debug \
@@ -98,23 +111,6 @@ DEB_CONFIGURE_USER_FLAGS= \
         --enable-system-myspell \
         --with-distribution-id=com.ubuntu \
 	$(BRANDING)
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-        DEB_CONFIGURE_USER_FLAGS += \
-                --disable-optimize \
-                $(NULL)
-endif
-
-USE_SYSTEM_CAIRO := $(shell pkg-config --exists 'cairo >= 1.5.4'; a=$$?; if test $$a != 1; then echo 1; fi)
-
-# for old cairo versions we cannot use system cairo
-ifeq (1, $(USE_SYSTEM_CAIRO))
-   DEB_CONFIGURE_USER_FLAGS += \
-        --enable-system-cairo
-else
-   DEB_CONFIGURE_USER_FLAGS += \
-        --disable-system-cairo
-endif
 
 UUDECODE = \
 	debsearch.gif \
